# Orchestopia

./: README.md  pyproject.toml
config/: agent.toml  agent.yaml  format.toml  format.yaml  mcp_tool.toml  mcp_tool.yaml  model.toml  model.yaml
orchestopia/: __init__.py
orchestopia/builder/: agent.py  format.py  mcp_tool.py  model.py  utils.py
src/orchestopia/: utils.py
src/orchestopia/agent/: __init__.py  a2a_client_manager.py  agent_to_a2a.py  config.py  factory.py  loader.py
src/orchestopia/mcp_tool/: __init__.py  config.py  factory.py  loader.py  session_manager.py
src/orchestopia/model/: __init__.py  config.py  factory.py  loader.py
src/orchestopia/output_format/: __init__.py  config.py  factory.py  loader.py
src/orchestopia/registry/: __init__.py  base.py  resource.py
