[project]
name = "orchestopia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.22",
    "anyio>=4.10.0",
    "pydantic-ai-slim[a2a,mcp,openai]>=0.5.0",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
